@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-08-03T16:25:27Z",
+  "timestamp" : "2022-08-04T01:45:25Z",
   "count_outdated" : 283,
   "uniques_outdated" : 171,
-  "count" : 289,
-  "uniques" : 176,
+  "count" : 290,
+  "uniques" : 177,
   "clones" : [
     {
       "timestamp": "2022-07-22T00:00:00Z",
@@ -21,6 +21,13 @@
     },
     {
       "timestamp": "2022-07-27T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-08-03T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
