@@ -1,6 +1,6 @@
 {
-  "count": 6,
-  "uniques": 5,
+  "count": 7,
+  "uniques": 6,
   "clones": [
     {
       "timestamp": "2022-07-22T00:00:00Z",
@@ -14,6 +14,11 @@
     },
     {
       "timestamp": "2022-07-27T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-08-03T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
